# OptimShortestPaths.jl

./: .gitignore  Project.toml  README.md
ChemPath/: .gitignore  ChemPath_Research_Log.md  README.md  pyproject.toml  run_assessment.py
ChemPath/chempath/: __init__.py
ChemPath/chempath/agent/: __init__.py  engine.py  tools.py
ChemPath/chempath/chemistry/: __init__.py  properties.py  smiles.py
ChemPath/chempath/data/: __init__.py  biological_network.py  chembl_client.py  curated_data.py  data_validation.py  loader.py  mock_data.py
ChemPath/chempath/graph/: __init__.py  analysis.py  benchmark.py  builder.py  dmy_bridge.jl  julia_bridge.py  network.py  optimizer.py  pathfinding.py  validation.py
ChemPath/chempath/ml/: __init__.py
ChemPath/chempath/ui/: __init__.py  app.py  dashboard.py
ChemPath/scripts/: _dmy_benchmark_runner.jl  chat.py  chempath_3d_poc.py  chempath_enriched_benchmark.py  demo.py  demo_real.py  dmy_hetionet_benchmark.jl  dmy_vs_dijkstra.py  fetch_chembl_data.py  generate_final_figures.py  hetionet_benchmark.py  poc3_case_studies.py  scaleup_test.py  sider_auroc_comparison.py  sider_safety_score.py
ChemPath/tests/: test_agent_tools.py  test_chembl_client.py  test_data_validation.py  test_graph.py  test_multihop.py  test_optimizer.py  test_properties.py  test_smiles.py
docs/: make.jl
examples/: generic_utilities_demo.jl
paper/: main.tex  references.bib
src/: OptimShortestPaths.jl  bmssp.jl  core_types.jl  dmy_algorithm.jl  multi_objective.jl  pharma_networks.jl
test/: README.md  TEST_DOCUMENTATION.md  run_single_test.jl  runtests.jl  (+4 more)
(+14 files in other folders)
