[project]
name = "chempath"
version = "0.1.0"
description = "LLM-powered drug screening assistant using shortest-path graph optimization"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "anthropic>=0.84.0",
    "chainlit>=2.10.0",
    "networkx>=3.2",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "streamlit>=1.55.0",
]

[project.optional-dependencies]
# RDKit: install via conda (conda install -c conda-forge rdkit) — no pip wheel for 3.12
ml = ["chemprop>=2.1.0"]
agent = ["anthropic>=0.45.0"]
ui = ["chainlit>=1.0.0"]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chempath"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
